--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,13 +1,12 @@
 <section class="mb-section">
-    <h1 class="silver mb-16 text-[4rem] font-extrabold uppercase text-center leading-[4rem] md:text-[8rem] md:leading-[7rem] md:text-start">
-        beauty <br/> spaces
+    <h1 class="text-zinc-800 mb-16 text-[4rem] font-extrabold uppercase text-center leading-[4rem] md:text-[8rem] md:leading-[7rem] md:text-start">
+        未来を創造する
     </h1>
     <figure>
         <div class="relative mb-4">
-            <img class="w-full object-cover rounded-br-[3rem] md:h-[30rem] md:rounded-br-[10rem]" src="images/another/clouds.jpg"/>
-            <img class="absolute right-0 bottom-0 z-10 rounded-br-[3rem] md:rounded-br-[10rem]" src="images/another/building.webp"/>
-            <img class="border-zinc-950 absolute w-[5rem] right-[20%] bottom-0 translate-y-1/2 z-20 border-[8px] rounded-full  md:w-[8rem]" src="images/another/pin.png"/>
+            <img class="w-full object-cover rounded-br-[3rem] md:h-[30rem] md:rounded-br-[10rem]" src="/public/images/corporate/office.jpg"/>
+            <img class="border-slate-100 absolute w-[5rem] right-[20%] bottom-0 translate-y-1/2 z-20 border-[8px] rounded-full md:w-[8rem]" src="/public/images/corporate/logo.png"/>
         </div>
-        <figcaption class="silver uppercase font-medium text-xs md:text-base">© architectural firm est 1998</figcaption>
+        <figcaption class="text-zinc-800 uppercase font-medium text-xs md:text-base">© CASIJBL SYIBULY est 1990</figcaption>
     </figure>
-</section>
+ </section>
