--- a/src/components/sections/Team.astro
+++ b/src/components/sections/Team.astro
@@ -3,19 +3,19 @@ import TeamCard from "../utils/TeamCard.astro";
 
 ---
 
-<section class="mb-section">
+<section id="team" class="mb-section">
     <header class="mb-8 grid gap-4 md:grid-cols-2 md:gap-8">
         <h2 class="text-title">
-            meet our people
+            経営チーム
         </h2>
         <p class="text-sm opacity-50 md:text-base">
-            meet the best expert talents from our team who are ready to be your partners
+            豊富な経験と専門知識を持つ経営陣をご紹介します
         </p>
     </header>
     <section class="h-[35rem] grid gap-4 md:h-[30rem] md:grid-cols-2 lg:grid-cols-4">
-        <TeamCard name="Thomas Mueler" alt="some people" src="images/team/man_01.jpg"/>
-        <TeamCard name="Daniel Salasar" alt="some people" src="images/team/man_02.jpg"/>
-        <TeamCard name="Eduardo Franco" alt="some people" src="images/team/man_03.jpg"/>
-        <TeamCard name="Max Alfredo" alt="some people" src="images/team/man_04.jpg"/>
+        <TeamCard name="佐藤 誠" alt="代表取締役社長" src="/public/images/team/ceo.jpg"/>
+        <TeamCard name="田中 優" alt="取締役CTO" src="/public/images/team/cto.jpg"/>
+        <TeamCard name="山田 健一" alt="取締役CFO" src="/public/images/team/cfo.jpg"/>
+        <TeamCard name="鈴木 美咲" alt="取締役COO" src="/public/images/team/coo.jpg"/>
     </section>
-</section>
+ </section>
