--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -1,22 +1,22 @@
 ---
 import AboutAcordeon from "../utils/AboutAccordion.astro";
-
 ---
 
-<section class="mb-section">
-    <header class="mb-8 grid gap-4 md:grid-cols-2 md:gap-8">
-        <h2 class="text-title">
-            areas of expertise
-        </h2>
-        <p class="text-sm opacity-50 md:text-base">
-            with more than 20+ years of experiencie, we always develop
-            a deeper expertise for you
-        </p>
-    </header>
-    <section class="grid gap-8 md:grid-cols-2">
-        <AboutAcordeon open={1}/>
-        <div class="w-full aspect-square rounded-br-[10rem] overflow-hidden">
-            <img class="w-full h-full object-cover" src="images/buildings/arch_05.jpg" alt="some building">
-        </div>
-    </section>
+<section id="about" class="mb-section">
+  <header class="mb-8 grid gap-4 md:grid-cols-2 md:gap-8">
+    <h2 class="text-title">事業領域</h2>
+    <p class="text-sm opacity-50 md:text-base">
+      30年以上の実績と専門知識で、お客様に最適なソリューションを提供します
+    </p>
+  </header>
+  <section class="grid gap-8 md:grid-cols-2">
+    <AboutAcordeon open={1} />
+    <div class="w-full aspect-square rounded-br-[10rem] overflow-hidden">
+      <img
+        class="w-full h-full object-cover"
+        src="/public/images/corporate/solution.jpg"
+        alt="ソリューション"
+      />
+    </div>
+  </section>
 </section>
