--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -1,23 +1,19 @@
 <footer>
-	<nav class="py-4">
-		<ul
-			class="flex justify-between uppercase font-medium text-sm text-transparent md:text-base"
-		>
-			<li>
-				<a class="silver hover:brightness-150" href="#"
-					>terms & agreements</a
-				>
-			</li>
-			<li>
-				<a class="silver hover:brightness-150" href="#"
-					>©all rights reserved</a
-				>
-			</li>
-			<li>
-				<a class="silver hover:brightness-150" href="#"
-					>privacy policy</a
-				>
-			</li>
-		</ul>
-	</nav>
+  <nav class="py-4">
+    <ul
+      class="flex justify-between uppercase font-medium text-sm text-transparent md:text-base"
+    >
+      <li>
+        <a class="silver hover:brightness-150" href="#">利用規約</a>
+      </li>
+      <li>
+        <a class="silver hover:brightness-150" href="#"
+          >©2024 CASIJBL SYIBULY</a
+        >
+      </li>
+      <li>
+        <a class="silver hover:brightness-150" href="#">プライバシーポリシー</a>
+      </li>
+    </ul>
+  </nav>
 </footer>
