--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -1,15 +1,20 @@
 <header class="mb-16">
-    <nav class="py-4">
-        <ul class="flex justify-between uppercase font-medium text-sm text-transparent md:text-base">
-            <li>
-                <a class="silver hover:brightness-150" href="#">hire us</a>
-            </li>
-            <li>
-                <a class="silver text-lg hover:brightness-150 md:text-xl " href="#">architecte</a>
-            </li>
-            <li>
-                <a class="silver hover:brightness-150" href="#">menu</a>
-            </li>
-        </ul>
-    </nav>
+  <nav class="py-4">
+    <ul
+      class="flex justify-between uppercase font-medium text-sm text-transparent md:text-base"
+    >
+      <li>
+        <a class="silver hover:brightness-150" href="#contact">CONTACT</a>
+      </li>
+      <li>
+        <a class="silver hover:brightness-150" href="#portfolio">PORTFOLIO</a>
+      </li>
+      <li>
+        <a class="silver hover:brightness-150" href="#team">TEAM</a>
+      </li>
+      <li>
+        <a class="silver hover:brightness-150" href="#about">ABOUT</a>
+      </li>
+    </ul>
+  </nav>
 </header>
