--- a/src/components/sections/Summary.astro
+++ b/src/components/sections/Summary.astro
@@ -1,6 +1,6 @@
 <section class="mb-section grid gap-4 md:grid-cols-2 md:gap-12">
-    <h2 class="text-title">we are your partner in building a legacy</h2>
+    <h2 class="text-title">先進技術と確かな品質で、未来を創造する</h2>
     <p class="neutral-100 opacity-50 text-sm md:text-base">
-        with passion and thoughts, we help bring your vision to reality and overcome any engineering and technical challenge, without doubt
+        30年以上の実績と技術力で、お客様のビジョンを実現し、あらゆる技術的課題を解決します。私たちは、お客様のベストパートナーを目指します。
     </p>
-</section>
+ </section>
