--- a/src/global/styles/custom.css
+++ b/src/global/styles/custom.css
@@ -2,9 +2,9 @@
 
 @layer components{
     /*Effects*/
-    .silver{
-        @apply bg-gradient-to-r from-slate-400 to-slate-50 text-transparent bg-clip-text;
-    }
+    .silver {
+        @apply bg-gradient-to-r from-zinc-800 to-zinc-600 text-transparent bg-clip-text;
+     }
 
     /*Writing*/
     .text-title{
