--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -4,8 +4,8 @@
     </h1>
     <figure>
         <div class="relative mb-4">
-            <img class="w-full object-cover rounded-br-[3rem] md:h-[30rem] md:rounded-br-[10rem]" src="/public/images/corporate/office.jpg"/>
-            <img class="border-slate-100 absolute w-[5rem] right-[20%] bottom-0 translate-y-1/2 z-20 border-[8px] rounded-full md:w-[8rem]" src="/public/images/corporate/logo.png"/>
+            <img class="w-full object-cover rounded-br-[3rem] md:h-[30rem] md:rounded-br-[10rem]" src="images/corporate/office.jpg"/>
+            <img class="border-slate-100 absolute w-[5rem] right-[20%] bottom-0 translate-y-1/2 z-20 border-[8px] rounded-full md:w-[8rem]" src="images/corporate/logo.png"/>
         </div>
         <figcaption class="text-zinc-800 uppercase font-medium text-xs md:text-base">© CASIJBL SYIBULY est 1990</figcaption>
     </figure>
