--- a/src/components/sections/Team.astro
+++ b/src/components/sections/Team.astro
@@ -13,9 +13,9 @@ import TeamCard from "../utils/TeamCard.astro";
         </p>
     </header>
     <section class="h-[35rem] grid gap-4 md:h-[30rem] md:grid-cols-2 lg:grid-cols-4">
-        <TeamCard name="佐藤 誠" alt="代表取締役社長" src="/public/images/team/ceo.jpg"/>
-        <TeamCard name="田中 優" alt="取締役CTO" src="/public/images/team/cto.jpg"/>
-        <TeamCard name="山田 健一" alt="取締役CFO" src="/public/images/team/cfo.jpg"/>
-        <TeamCard name="鈴木 美咲" alt="取締役COO" src="/public/images/team/coo.jpg"/>
+        <TeamCard name="佐藤 誠" alt="代表取締役社長" src="images/team/ceo.jpg"/>
+        <TeamCard name="田中 優" alt="取締役CTO" src="images/team/cto.jpg"/>
+        <TeamCard name="山田 健一" alt="取締役CFO" src="images/team/cfo.jpg"/>
+        <TeamCard name="鈴木 美咲" alt="取締役COO" src="images/team/coo.jpg"/>
     </section>
  </section>
